--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+**/.DS_Store
+
 /node_modules
 /public/hot
 /public/storage
@@ -10,3 +12,4 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .env
+database/imports/db-admin-assignment.sql
